Fixed some issues

--- a/src/components/Bag/Bag.module.css
+++ b/src/components/Bag/Bag.module.css
@@ -14,6 +14,22 @@
     align-items: center;
 }
 
+.buttonFlexContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.buttonContainer button{
+    
+    padding: 0;
+
+}
+
+.buttonContainer img{
+    width: 17px;
+}
+
 .betContainer{
     width: 100%;
     display: flex;
