--- a/src/components/EventItem/Event.module.css
+++ b/src/components/EventItem/Event.module.css
@@ -12,6 +12,7 @@
 .title {
     margin: 0;
     margin-bottom: 5px;
+    font-weight: 500;
 }
 
 
@@ -29,8 +30,7 @@
     margin-bottom: 5px;
 }
 
-.betContainer {
-}
+
 
 .betText {
     margin-bottom: 5px;
