Fixed some issues

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none; 
 }
+
+::-webkit-scrollbar {
+    display: none;
+  }
+  
+ 
 
 a {
   font-weight: 500;
